# microbial-strain-app

./: .gitignore  README.md  app.py  crud.py  data.sqlite  database.py  empty_database.py  models.py  pyproject.toml
templates/: create_gene.html  create_plasmid.html  create_strain.html  display_genes.html  display_plasmids.html  display_strains.html  index.html  upload_plasmid_snapgene_file.html
tests/: test_microbial_strain_app.py
