[tool.poetry]
name = "microbial-strain-app"
version = "0.1.0"
description = ""
authors = ["Andrew Chong <opheron@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask_sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
